# MeCab-php

./: Dockerfile  README.md  docker-compose.yml
examples/: mecab.php
mecab/: CMakeLists.txt
mecab/classes/: mecab.php.cc  mecab.php.h
mecab/config/: config.cmake  config.h.in
mecab/include/: php_mecab.h
mecab/src/: mecab.c
mecab/tests/: 001.phpt
